--- a/rdbms/rdbms.vcxproj
+++ b/rdbms/rdbms.vcxproj
@@ -151,7 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="InputBuffer.cpp" />
     <ClCompile Include="rdbms.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="InputBuffer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
